--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./src/assets/img/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foodiem</title>
     <script defer src="https://kit.fontawesome.com/bc8cf8c793.js" crossorigin="anonymous"></script>
