update brand name on all pages

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/img/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foodiem</title>
+    <title>Foodeem</title>
+    <meta name="description" content="Explore a wide range of delicious recipes for every occasion. From easy weeknight dinners to gourmet meals, Culinary Delights has it all. Discover new flavors and cooking techniques today!">
+    <meta name="keywords" content="recipes, cooking, gourmet, easy dinners, culinary, meals, desserts, international cuisine">
+    <link rel="canonical" href="https://foodeem.vercel.app/">
     <script defer src="https://kit.fontawesome.com/bc8cf8c793.js" crossorigin="anonymous"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=MediaQueryList.prototype.addEventListener%2CMediaQueryList.prototype.removeEventListener"></script>
   </head>
