fix recipe axios call for modal

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
     <meta name="keywords" content="recipes, cooking, gourmet, easy dinners, culinary, meals, desserts, international cuisine">
     <link rel="canonical" href="https://foodeem.vercel.app/">
     <script defer src="https://kit.fontawesome.com/bc8cf8c793.js" crossorigin="anonymous"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=MediaQueryList.prototype.addEventListener%2CMediaQueryList.prototype.removeEventListener"></script>
+    <!-- below script for aws to work on safari -->
+    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=MediaQueryList.prototype.addEventListener%2CMediaQueryList.prototype.removeEventListener"></script> -->
   </head>
   <body>
     <div id="root"></div>
